correction stretch image info

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,9 +43,9 @@
 }
 #infos{
   position: absolute;
-  top:-6%;
+  top:0%;
   left:1%;
-  height: 500px;
+  height: auto;
   width:500px;
   content:url('./src/INFOS.png')
 }
